[gd_scene load_steps=3 format=3 uid="uid://i2fmgsopd4xp"]

[ext_resource type="Script" uid="uid://ccgcjso1is00d" path="res://scenes/game/emote_dialog.gd" id="1_4a0rs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ipmd"]
bg_color = Color(0.141176, 0.141176, 0.141176, 0.580392)

[node name="EmoteDialog" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4a0rs")

[node name="CloseOuterClick" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(1280, 720)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0ipmd")

[node name="OuterMargin" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VerticalLayout" type="VBoxContainer" parent="PanelContainer/OuterMargin"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="HeaderButtons" type="HBoxContainer" parent="PanelContainer/OuterMargin/VerticalLayout"]
layout_mode = 2
alignment = 2

[node name="ToggleMuteButton" type="Button" parent="PanelContainer/OuterMargin/VerticalLayout/HeaderButtons"]
layout_mode = 2
text = "MUTE"

[node name="ImageButtons" type="GridContainer" parent="PanelContainer/OuterMargin/VerticalLayout"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 6

[node name="TextButtons" type="GridContainer" parent="PanelContainer/OuterMargin/VerticalLayout"]
layout_mode = 2
size_flags_horizontal = 4
columns = 5

[connection signal="pressed" from="CloseOuterClick" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="PanelContainer/OuterMargin/VerticalLayout/HeaderButtons/ToggleMuteButton" to="." method="_on_toggle_mute_button_pressed"]
